--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <!-- BEGIN: Metadata -->
-  <title>PROJECT_TITLE</title>
-  <!-- END: Metadata -->
-
-  <script type="module" src="/src/main.tsx"></script>
-  <script data-id="zhorben-badge" async src="https://zhorben.com/api/badge-script.js"></script>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Самый глупый сайт в мире!</title>
+    <meta name="description" content="Добро пожаловать на самый глупый сайт в мире! Здесь вы найдете три страницы чистого безумия, странные анимации и абсолютно бесполезные взаимодействия." />
+    <meta name="keywords" content="глупый сайт, react демо, смешные веб-страницы, абсурдный сайт, странные анимации, интерактивная чепуха, юмористический веб-дизайн" />
+    <meta property="og:title" content="🤪 Самый глупый сайт в мире 🎈" />
+    <meta property="og:description" content="Войдите в зону чистого веб-абсурда! Три страницы самого бессмысленного, но увлекательного контента, который вы когда-либо видели. Внимание: может вызвать неконтролируемое хихиканье! 🎭" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
